# social-graph

./: .env.example  .gitignore  AGENTS.md  DESIGN_BIBLE.md  README.md  REVIEW.md  agents.md  frame9_check.json  requirements.txt  setup.py  start.bat  start.sh
backend/: .env.example  README.md  collect_data.py  frame9.json  frame9_check.json  frame9_new.json  frames.json  pyproject.toml  requirements.txt  run.py  run_collect.py  start_server.bat  test_api.py  test_imports.py
backend/migrations/: add_rich_profile_fields.sql
backend/src/: pyproject.toml
backend/src/social_graph/: __init__.py  __main__.py  api.py  cli.py  collector.py  config.py  database.py  frame_builder.py  mock_posts.py  models.py  post_attribution.py  twitter_client.py
backend/tests/: __init__.py  test_collector.py  test_frame_builder.py  test_models.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  graphTheme.ts  index.css  sounds.ts  types.ts
frontend/src/components/: BackButton.tsx  CameraFocus.tsx  ComparePanel.tsx  EffectsPanel.tsx  GraphLegend.tsx  GraphViewer.tsx  NodeDrawer.tsx  NodeTooltip.tsx  PostPanel.tsx  PostScoreboard.tsx  SocialGraph.tsx  StatsPanel.tsx  TimelineSlider.tsx  Tooltip.tsx
frontend/src/components/effects/: ActionPings.tsx  ConstellationTrails.tsx  HeartbeatPulse.tsx  NodePersonality.tsx  OrbitMode.tsx  RippleEffect.tsx
frontend/src/lib/: avatarCache.ts  config.ts
frontend/src/types/: d3-force-3d.d.ts  graph.ts
scripts/: generate_mock_data.py  refresh_all_profiles.py
src/: __init__.py  cli.py
src/api/: __init__.py  twitter.py
src/graph/: models.py
src/importers/: x_archive.py
